# Arkanoid

./: CMakeLists.txt  configure.bat
cmake/: FindSimpleSquirrel.cmake  FindSquall.cmake  FindSquirrel.cmake  FindTiny2D.cmake  external_dependecies.cmake
include/: engine.h  rmgr.h.in
scripts/: settings.nut
sdk/simplesquirrel/lib/debug/: simplesquirrel.lib
sdk/simplesquirrel/lib/release/: simplesquirrel.lib  simplesquirrel_static.lib
sdk/squirrel/lib/vc14_x64/debug/: sqstdlib.lib  sqstdlib_static.lib  squirrel.lib  squirrel_static.lib
sdk/squirrel/lib/vc14_x64/release/: sqstdlib.lib  sqstdlib_static.lib  squirrel.lib  squirrel_static.lib
source/: CMakeLists.txt
source/application/: CMakeLists.txt  main.cpp
source/engine/: CMakeLists.txt  engine.cpp
